ChangeLog
=========


2022-01-23: quickly-0.5.0

- requires parce-0.30.0
- added time module for time computations
- added key module for key signature and tonic computations
- added rhythm module to manipulate durations in music or a part thereof
- added dom.scope module to find nodes from included files
- modified PitchProcessor:
    - note names now carry a default octave
    - pitch() method now returns a Pitch, old pitch() renamed to process()
- introduced lily.ChordBody and FigureBody, to be able to add Duration at Chord
  and Figure directly
- added lily.Durable as base type for any stuff that can have a Duration
- notes as argument to \relative, \key or \transpose are now Pitch, not Note
- handle single durations in lyricmode, just like Unpitched
- improvements to duration module, add duration.Transform
- added transform() method to all Music nodes, to calculate durations in child
  nodes
- added properties() method to Music node type, to store information during
  processing of descendant music
- added datatypes module for small datatype helper classes, featuring Properties
- documentation improvements


2021-12-31: quickly-0.4.0

- added relative module, with abs2rel and rel2abs functions
- possible to direct generators in Node and Range to not descend in a node
- added node.Range class, to denote a range within a Node tree
- added end parameter to Element.find_descendant(s)
- added Element.find_descendant_right() and -left()
- added dom.edit module to edit a parce document via the DOM node tree
- added pitch.PitchProcessor.find_language and follow_language()
- some methods/functions renamed and API cleanups
- documentation improvements


2021-12-21: quickly-0.3.0

- requires parce-0.28.0
- DOM elegantly handles untransformed parce stuff such as CSS/JS in Html
- Note and positioned Rest now have attrs for octave, accidental and oct_check
- pitch: added Pitch and PitchProcessor to read/write pitch names in all