@@ -2,6 +2,12 @@ ChangeLog
 =========
 
 
+current: quickly-0.6.0
+
+- requires parce-0.31.0
+- small registry module changes to adapt to parce
+
+
 2022-01-23: quickly-0.5.0
 
 - requires parce-0.30.0
